[Thiago & JB] LCsY6cIu fixes Other News vertical spacing

--- a/themes/main/src/sass/_helpers/mixins.scss
+++ b/themes/main/src/sass/_helpers/mixins.scss
@@ -195,7 +195,7 @@
   @include get-font(OTHER);
 
   .other-bar {
-    margin: 0;
+    margin: $PARAGRAPH-SPACE 0 0;
   }
 
   .other-title {
